# tellur

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.ja.md  README.md  RELEASING.md  flake.nix  knope.toml  rust-toolchain.toml
.changeset/: added_a_new_skill_for_ai_agents.md  added_a_rich_startup_banner_to_tellur_live.md  added_configurable_stroke_styles.md  added_ordered_audio_effect_components.md  cache_font_unit_metrics.md  excluded_line_gap_from_text_intrinsic_height.md  fixed_a_memory_error_occurring_during_plugin_execution.md  fixed_an_issue_in_tellur_live_where_errors_were_repeatedly_displayed_in_the_console_when_zooming_in_on_the_timeline.md  fixed_an_issue_in_tellur_live_where_typeerror_failed_to_fetch_continues_to_be_displayed_even_after_reconnection.md  fixed_gpu_closed_stroke_artifacts.md  fixed_vector_paint_bounds.md  fixed_vram_exhaustion_panics_and_preview_lock_poisoning.md  increased_timeline_time_precision.md  made_component_cache_frequency_aware.md  made_component_trait_objects_cloneable.md  made_raster_residency_consumer_driven.md  removed_legacy_timeline_api.md  removed_redundant_child_composition_cache.md  removed_timeline_composite_cache.md  the_write_on_effect_now_renders_at_a_constant_speed_for_each_path_regardless_of_the_stroke_length.md  unified_positioning_and_added_stack.md
.github/workflows/: nix.yml  pr-title.yml  prepare-release.yml  release.yml  rust.yml
core/: Cargo.toml
core/src/: lib.rs
core/src/node/: mod.rs  tree.rs
core/src/tellur_std_node/logical/: and.rs  mod.rs  not.rs
core/src/tree/: mod.rs
core/src/types/: mod.rs
core/src/util/: correspond.rs  mod.rs
docs/: layout-tutorial.ja.md  layout-tutorial.md  time-tutorial.ja.md  time-tutorial.md
editor/: Cargo.toml
examples/quickstart/: Cargo.toml
examples/quickstart/src/: lib.rs
skills/tellur-authoring/: SKILL.ja.md  SKILL.md
tellur/: Cargo.toml
tellur-core/: Cargo.toml
tellur-core/src/: audio.rs  builder.rs  cache_budget.rs  clip.rs  color.rs  component.rs  composite.rs  dyn_compare.rs  easing.rs  fragment.rs  geometry.rs  interpolate.rs  layer.rs  layout.rs  lib.rs  math.rs  phase.rs  placement.rs  raster.rs  render_context.rs  scalar.rs  shapes.rs  span.rs  text.rs  time.rs  timeline.rs  timeline_component.rs  timeline_container.rs  vector.rs  video_decode.rs  window.rs
tellur-core/src/effect/: mod.rs  outline.rs  write.rs
tellur-core/src/layout/: decorated_box.rs  flex.rs  frame.rs  mod.rs  padding.rs  sized_box.rs  stack.rs
tellur-core/src/timeline_component/: audio_effect.rs  audio_render.rs  clock.rs  component.rs  event_path_tests.rs  mod.rs  output.rs  placed.rs  resolve.rs  tests.rs  trigger.rs  trim.rs
tellur-core/src/timeline_container/: containers.rs  leaves.rs  mod.rs  tests.rs
tellur-core/tests/: component_fn_effect.rs  component_fn_timeline_boxed.rs  component_multiple_children.rs
tellur-live/: Cargo.toml  README.md  build.rs
tellur-live/examples/: demo_timeline_mp4.rs  demo_timeline_plugin.rs  timeline_showcase.rs
tellur-live/examples/demo_scene/: backdrop.rs  common.rs  field.rs  hud.rs  mod.rs  overlay.rs  overture.rs  resolve.rs  scan.rs  streak.rs
tellur-live/src/: build_watch.rs  lib.rs  main.rs  plugin.rs  server.rs  startup_info.rs
tellur-live/tests/: plugin_abi.rs
tellur-live/web/: index.html  package-lock.json  package.json  vite.config.ts
tellur-live/web/src/: App.tsx  api.ts  cache.ts  formatTime.ts  main.tsx  mediaCache.ts  timelineViewport.ts  types.ts
tellur-live/web/src/components/: Header.tsx  Inspector.tsx  Preview.tsx  PreviewScrubber.tsx  RollingNumber.tsx  TabsRow.tsx  Timeline.tsx  TimelineViewportBar.tsx  Transport.tsx
tellur-live/web/src/preview/: TimelinePlayer.ts  usePreview.ts
tellur-live/web/src/styles/: global.css
tellur-macros/: Cargo.toml
tellur-macros/src/: keyable.rs  lib.rs
tellur-plugin/: Cargo.toml  build.rs  fingerprint.rs
tellur-plugin/src/: abi.rs  lib.rs
tellur-plugin/tests/: export_timeline_default.rs  export_timeline_options.rs
tellur-renderer/: Cargo.toml
tellur-renderer/examples/: circle_to_png.rs  math_to_png.rs  math_write_to_mp4.rs  math_write_to_png.rs  memoization_benchmark.rs  raster_layer_to_png.rs  scene_to_png.rs  text_span_aspect_to_png.rs  text_to_png.rs  timeline_to_mp4.rs
tellur-renderer/src/: gpu.rs  host_info.rs  lib.rs  motion_blur.rs  outline.rs  rasterize.rs  render_context.rs  shadow.rs  subtitle.rs  video.rs
tellur-renderer/src/cache/: mod.rs  policy.rs  store.rs
tellur/src/: lib.rs
tellur/tests/: export_timeline_facade.rs
tellur_core/: Cargo.toml
tellur_core/benches/: benchmark.rs  or_with_andnot.rs  wrapped_not.rs
tellur_core/src/: lib.rs
tellur_core/src/composition/: mod.rs
tellur_core/src/exception/: mod.rs
tellur_core/src/node/: mod.rs
tellur_core/src/tellur_std_node/logical/: and.rs  not.rs  or.rs
tellur_core/src/tree/: mod.rs  plan.rs
tellur_core/src/types/: mod.rs
tellur_core/src/util/: correspond.rs
tellur_core/tests/: or_and_function_tree.rs  or_composition.rs  or_function_tree.rs
tools/release-notes/: Cargo.toml
tools/release-notes/src/: main.rs
