[workspace]
members = [
    "tellur",
    "tellur-core",
    "tellur-live",
    "tellur-macros",
    "tellur-plugin",
    "tellur-renderer",
]
exclude = ["tools/release-notes"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/comnipl/tellur"
