[package]
name = "tellur-live"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tellur-core = { path = "../tellur-core" }
tellur-renderer = { path = "../tellur-renderer" }

[[example]]
name = "demo_timeline_plugin"
crate-type = ["cdylib"]

[[example]]
name = "demo_timeline_mp4"
path = "examples/demo_timeline_mp4.rs"

[[example]]
name = "timeline_showcase"
crate-type = ["cdylib"]
