[package]
name = "tellur-live"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "Live-preview server for tellur projects with hot rebuild"
build = "build.rs"
# `web/dist` (the Vite bundle build.rs embeds) is gitignored, so by default it is
# left out of the published crate — consumers would then have to run npm at build
# time. `include` overrides .gitignore, so a release step that runs
# `npm run build` before `cargo publish` ships the prebuilt bundle and build.rs
# short-circuits. `include` is exhaustive, so the rest of the crate is listed too.
include = [
    "src/**/*.rs",
    "build.rs",
    "examples/**/*",
    "web/dist/**/*",
    "/README.md",
    "/LICENSE",
]

[dependencies]
lru = "0.12.5"
png = "0.18.1"
tellur-core = { path = "../tellur-core", version = "0.2.0" }
tellur-plugin = { path = "../tellur-plugin", version = "0.2.0" }
tellur-renderer = { path = "../tellur-renderer", version = "0.2.0" }

[[example]]
name = "demo_timeline_plugin"
crate-type = ["cdylib"]

[[example]]
name = "demo_timeline_mp4"
path = "examples/demo_timeline_mp4.rs"

[[example]]
name = "timeline_showcase"
crate-type = ["cdylib"]

[dev-dependencies]
tellur-plugin = { path = "../tellur-plugin", version = "0.2.0" }
