[package]
name = "tellur-plugin"
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
description = "Plugin ABI for loading tellur timelines as dynamic libraries"

[dependencies]
tellur-core = { path = "../tellur-core", version = "0.1.0" }
