[package]
name = "tellur-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "Plugin ABI for loading tellur timelines as dynamic libraries"
build = "build.rs"

[dependencies]
tellur-core = { path = "../tellur-core", version = "0.3.0" }
