[package]
name = "tellur-renderer"
version = "0.1.0"
edition = "2021"

[features]
# Forwards to `tellur-core/latex` so examples (and downstream renderers) can
# typeset inline LaTeX math spans.
latex = ["tellur-core/latex"]

[[example]]
name = "math_to_png"
required-features = ["latex"]

[[example]]
name = "math_write_to_png"
required-features = ["latex"]

[[example]]
name = "math_write_to_mp4"
required-features = ["latex"]

[dependencies]
bytemuck = "1.25.0"
bytes = "1.11.1"
console = "0.16.3"
indicatif = "0.18.4"
lru = "0.12"
pollster = "0.3"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
tellur-core = { path = "../tellur-core" }
thiserror = "2.0.18"
tiny-skia = "0.12.0"
vello = "0.2.1"
wgpu = "0.20.1"
