[package]
name = "tellur-renderer"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "GPU (wgpu/vello) and CPU rasterization plus ffmpeg encoding for tellur"

[package.metadata.docs.rs]
features = ["latex"]

[features]
# Forwards to `tellur-core/latex` so examples (and downstream renderers) can
# typeset inline LaTeX math spans.
latex = ["tellur-core/latex"]

[[example]]
name = "math_to_png"
required-features = ["latex"]

[[example]]
name = "math_write_to_png"
required-features = ["latex"]

[[example]]
name = "math_write_to_mp4"
required-features = ["latex"]

[dependencies]
bytemuck = "1.25.0"
bytes = "1.11.1"
console = "0.16.3"
indicatif = "0.18.4"
lru = "0.12"
pollster = "0.3"
rustc-hash = "1.1.0"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
tellur-core = { path = "../tellur-core", version = "0.3.0" }
thiserror = "2.0.18"
tiny-skia = "0.12.0"
vello = "0.2.1"
wgpu = "0.20.1"
