[package]
name = "quickstart"
version = "0.1.0"
edition = "2021"
publish = false

# A reference timeline project: it depends ONLY on the `tellur` facade (no direct
# `tellur-core` / `tellur-plugin`), proving the macros resolve their generated
# paths through `tellur::core`. `default-features = false` skips the GPU backend —
# this scene is CPU-only.
[lib]
crate-type = ["cdylib"]

[dependencies]
tellur = { path = "../../tellur", default-features = false }
